2005-12-01  Thomas Vander Stichele  <thomas at apestaart dot org>

	* win32/:
	  add Visual Studio 6 build files

2005-12-01  Thomas Vander Stichele  <thomas at apestaart dot org>

	* docs/libs/gst-plugins-base-libs-docs.sgml:
	* docs/libs/gst-plugins-base-libs-sections.txt:
	* docs/libs/tmpl/gstaudio.sgml:
	* docs/libs/tmpl/gstringbuffer.sgml:
	* gst-libs/gst/interfaces/xoverlay.c:
	* gst-libs/gst/video/gstvideofilter.c:
	* gst-libs/gst/video/gstvideosink.c:
	  update documentation

2005-12-01  Thomas Vander Stichele  <thomas at apestaart dot org>

	* gst/tcp/gstmultifdsink.c: (gst_multi_fd_sink_base_init),
	(gst_multi_fd_sink_class_init), (gst_multi_fd_sink_init),
	(gst_multi_fd_sink_finalize), (gst_multi_fd_sink_add),
	(gst_multi_fd_sink_remove), (gst_multi_fd_sink_clear),
	(gst_multi_fd_sink_get_stats),
	(gst_multi_fd_sink_remove_client_link),
	(gst_multi_fd_sink_handle_client_read),
	(gst_multi_fd_sink_client_queue_data),
	(gst_multi_fd_sink_client_queue_caps),
	(gst_multi_fd_sink_client_queue_buffer),
	(gst_multi_fd_sink_new_client),
	(gst_multi_fd_sink_handle_client_write),
	(gst_multi_fd_sink_recover_client),
	(gst_multi_fd_sink_queue_buffer),
	(gst_multi_fd_sink_handle_clients), (gst_multi_fd_sink_thread),
	(gst_multi_fd_sink_render), (gst_multi_fd_sink_set_property),
	(gst_multi_fd_sink_get_property), (gst_multi_fd_sink_start),
	(gst_multi_fd_sink_stop), (gst_multi_fd_sink_change_state):
	* gst/tcp/gstmultifdsink.h:
	* gst/tcp/gsttcpclientsink.c: (gst_tcp_client_sink_get_type),
	(gst_tcp_client_sink_base_init), (gst_tcp_client_sink_class_init),
	(gst_tcp_client_sink_init), (gst_tcp_client_sink_finalize),
	(gst_tcp_client_sink_setcaps), (gst_tcp_client_sink_render),
	(gst_tcp_client_sink_set_property),
	(gst_tcp_client_sink_get_property), (gst_tcp_client_sink_start),
	(gst_tcp_client_sink_stop), (gst_tcp_client_sink_change_state):
	* gst/tcp/gsttcpclientsink.h:
	* gst/tcp/gsttcpclientsrc.c: (gst_tcp_client_src_base_init),