@@ -23,15 +23,6 @@ interface for adjusting color balance settings
 </para>
 
 
-<!-- ##### SIGNAL GstColorBalance::value-changed ##### -->
-<para>
-
-</para>
-
-@gstcolorbalance: the object which received the signal.
-@arg1: 
-@arg2: 
-
 <!-- ##### STRUCT GstColorBalanceClass ##### -->
 <para>
 
