@@ -1,3 +1,12 @@
+2005-12-01  Thomas Vander Stichele  <thomas (at) apestaart (dot) org>
+
+	* docs/libs/tmpl/gstcolorbalance.sgml:
+	* gst-libs/gst/rtp/gstbasertpdepayload.c:
+	* gst-libs/gst/rtp/gstbasertppayload.c:
+	* gst-libs/gst/rtp/gstrtpbuffer.c:
+	* gst-libs/gst/rtp/gstrtpbuffer.h:
+	  Do burger's rename for rtp payloaders and depayloaders
+
 2005-12-01  Thomas Vander Stichele  <thomas at apestaart dot org>
 
 	* win32/:
